<resources>
    <string name="dberror">Database Error. Try clearing app data in Android\'s settings</string>
    <string name="plus_str">+</string>
    <string name="minus_str">-</string>
    <string name="zero_str">0</string>
    <string name="twenty_str">20</string>
    <string name="plus_one">+1</string>
    <string name="plus_five">+5</string>
    <string name="minus_one">-1</string>
    <string name="minus_five">-5</string>
	<string name="app_name">MTG Familiar</string>
    <string-array name="supertypes">
        <item>Artifact</item>
        <item>Basic</item>
        <item>Creature</item>
        <item>Enchantment</item>
        <item>Instant</item>
        <item>Land</item>
        <item>Legendary</item>
        <item>Ongoing</item>
        <item>Plane</item>
        <item>Planeswalker</item>
        <item>Scheme</item>
        <item>Snow</item>
        <item>Sorcery</item>
        <item>Tribal</item>
        <item>Vanguard</item>
        <item>World</item>
    </string-array>
    <string-array name="logic_spinner">
        <item>></item>
        <item>&lt;</item>
        <item>=</item>
    </string-array>
    <string-array name="rarities">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Mythic</item>
        <item>Timeshifted</item>
    </string-array>
    <string-array name="pt_spinner">
        <item/>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>*</item>
        <item>1+*</item>
        <item>2+*</item>
        <item>7-*</item>
        <item>99</item>
        <item>*^2</item>
        <item>0.5</item>
        <item>1.5</item>
        <item>2.5</item>
        <item>3.5</item>
    </string-array>
    <string-array name="cmc_spinner">
        <item/>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>1000000</item>
    </string-array>
    <string-array name="momir_spinner">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="color_spinner">
        <item>May Include Any Color(s)</item>
        <item>Must Include All Colors</item>
        <item>No Other Colors</item>
        <item>Exact (all selected and no others)</item>
    </string-array>
    <string name="pow">Power</string>
    <string name="tou">Toughness</string>
    <string name="formatsearch">Format</string>
    <string name="setsearch">Set</string>
    <string name="cmc">CMC</string>
    <string name="image">Card Image</string>
    <string name="price">Card Price</string>
    <string name="changeset">Change Set</string>
    <string name="cardsearch">Card Search</string>
    <string name="rules">Rules</string>
    <string name="lifecounter">Life Counter</string>
    <string name="manapool">Mana Pool</string>
    <string name="random">Dice</string>
    <string name="searchrarity">Rarity</string>
    <string name="clear">Clear Fields</string>
    <string name="clear_all">Clear All</string>
    <string name="legality">Legality</string>
    <string name="about">About App</string>
    <string name="high">High:</string>
    <string name="med">Average:</string>
    <string name="low">Low:</string>
    <string name="pricetitle">TCGPlayer.com Prices</string>
    <string name="chkupd">Force Update</string>
    <string name="preferences">Settings</string>
    <string name="transform">Transform</string>
    <string name="d2title">Treat D2 As Coin</string>
    <string name="webDB">Build DB from Web</string>
    <string name="refreshDB">Refresh DB from APK</string>
    <string name="searchButton">Search!</string>
    <string name="randomButton">Randomize!</string>
    <string name="tcgplayerlink">Click here for all prices and trend info</string>
    <string name="toast_no_result">No Results Found</string>
    <string name="name">Name</string>
    <string name="subtype">Subtype</string>
    <string name="supertype">Supertype</string>
    <string name="text">Text</string>
    <string name="flavor_text">Flavor Text</string>
    <string name="artist">Artist</string>
    <string name="change_default_gathering">Change Default Gathering</string>
    <string name="about_this_app">This app is my gift to the MTG community.&lt;br />&lt;br />
Please send questions, comments, concerns, and praise to &lt;a href="mailto:mtg.familiar@gmail.com">mtg.familiar@gmail.com&lt;/a>.&lt;br />&lt;br />
Join the &lt;a href="http://code.google.com/p/mtg-familiar">open source project&lt;/a> on Google Code.&lt;br />&lt;br />
Thanks to zagaberoo for beautiful graphics and even more beautiful code.&lt;br />&lt;br />
Thanks to April King for the massive QA effort, and learning Java. Shh, don\'t tell anyone about that.&lt;br />&lt;br />
Thanks to Toastdeib for being my SQL guru sitting on top of the mountain.&lt;br />&lt;br />
Thanks to Reuben for being the best kind of user. You know, the kind that becomes a developer!&lt;br />&lt;br />
Thanks to Lotier from Reddit for coming out of nowhere with a great card trader activity!&lt;br />&lt;br />
Thanks to chaudakh for the wonderful Gatherer Extractor program.&lt;br />&lt;br />
Thanks to reddit\'s &lt;a href="http://www.reddit.com/r/magicTCG/">/r/magictcg&lt;/a> for testing and feedback.&lt;br />&lt;br />
Thanks to my brother for the icon.&lt;br />&lt;br />
Thanks to Chedy @ &lt;a href="http://tcgplayer.com">TCGPlayer.com&lt;/a> for the price API.&lt;br />&lt;br />
Special thanks to Richard Garfield and the rest of the folks at &lt;a href="http://www.wizards.com/magic">Wizards of the Coast&lt;/a>.&lt;br />&lt;br />
-gelakinetic&lt;br />&lt;br />&lt;br />
Magic the Gathering and Magic the Gathering cards are ™ &amp; © Wizards of the Coast LLC.&lt;br />&lt;br />
The Android robot is © Google &lt;br />&lt;br />
Program licenced under the &lt;a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3+&lt;/a>.&lt;br />&lt;br />
Media licenced under under the &lt;a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;a>.</string>
    <string name="whatsnew">
        
        
        
        
        
   
   
   
   - Searchable, linked comprehensive rules are now included.&lt;br />&lt;br />
   - Card rulings can now be pulled up for each card.&lt;br />&lt;br />
   - You can now save and load trades.&lt;br />&lt;br />
   - The life counter can announce life totals.&lt;br />&lt;br />
   - Round timer now has 5/10/15 minute warnings, accessible in the preferences.&lt;br />&lt;br />
   - Fancy new menu icons.&lt;br />&lt;br />
   - Fixed images for 2012 Planes and split cards.&lt;br />&lt;br />
   - Bugfixes and optimizations.&lt;br />&lt;br />

   - 1.7.1: Fixed price lookup.&lt;br />&lt;br />

   - 1.7.2: New Comprehensive Rules parser
 
     </string>
    <string name="lifetitle">Life Counter</string>
    <string name="wakelocksummary">Force the life counter screen to never go to sleep</string>
    <string name="wakelocktitle">Wake Lock</string>
    <string name="copy">Copy Section To Clipboard</string>
    <string name="copyall">Copy Card To Clipboard</string>
    <string-array name="updatefrequencydays">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>5 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
    </string-array>
    <string-array name="updatefrequencydaysvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>14</item>
    </string-array>
    <string name="search_hint">Search Names</string>
    <string name="cardviewtitle">Card View</string>
    <string name="picfirsttitle">Always Show Art</string>
    <string name="picfirstsummary">When viewing a card, load official card image instead of rules text</string>
    <string name="resultlisttitle">Result List</string>
    <string name="setPreftitle">Show Set</string>
    <string name="manacostPreftitle">Show Mana Cost</string>
    <string name="typePreftitle">Show Type/Subtype</string>
    <string name="abilityPreftitle">Show Rules Text</string>
    <string name="ptPreftitle">Show Power/Toughness</string>
    <string name="automaticupdatetitle">Automatic Updates</string>
    <string name="automaticupdatesummary">Check for new sets and bannings when the app opens</string>
    <string name="updatefrequencytitle">Update Frequency</string>
    <string name="updatefrequencysummary">Number of days to go between checking for new sets and bannings</string>
    <string name="random_creature">Random Creature</string>
    <string name="random_eqipment">Random Equipment</string>
    <string name="random_instant">Three Random Instants</string>
    <string name="random_sorcery">Three Random Sorceries</string>
    <string name="momirlabel">CMC =</string>
    <string name="stonehewer_label">CMC ≤</string>
    <string name="mojhosto_label">MoJhoSto Basic</string>
    <string name="randomleft">&lt;</string>
    <string name="randomright">></string>
    <string name="random_rules">MoJhoSto Basic Rules</string>
    <string name="addplayer">Add a Player</string>
    <string name="removeplayer">Remove a Player</string>
    <string name="announcelife">Announce Life Totals</string>
    <string name="quittosearch">Exit Results</string>
    <string name="whatsnewtitle">What\'s New</string>
    <string name="donate">Donate</string>
	    <string name="trader_done">Done</string>
	    <string name="trader_change_set">Change Set</string>
	    <string name="trader_remove">Remove</string>
	    <string name="trader_default_number_of">1x</string>
    <string name="card_rulings">Card Rulings</string>
    <string name="gathering_default_name">Default Name</string>
    <string name="gathering_custom_name">Custom Name</string>
    <string name="gathering_default_life">Starting Life</string>
    <string name="gathering_default_life_num">20</string>
    <string name="gathering_menu_save">Set and Save Gathering</string>
    <string name="gathering_menu_load">Load Gathering</string>
</resources>