<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Adam Feinstein

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/menu_search"/>
    <item
        android:id="@+id/image"
        android:icon="@drawable/menu_card_image"
        android:title="@string/image"/>
    <item
        android:id="@+id/price"
        android:icon="@drawable/menu_price"
        android:title="@string/price"/>
    <item
        android:id="@+id/changeset"
        android:icon="@drawable/menu_change_set"
        android:title="@string/changeset"/>
    <item
        android:id="@+id/legality"
        android:icon="@drawable/menu_rules"
        android:title="@string/legality"/>
    <item
        android:id="@+id/cardrulings"
        android:icon="@drawable/menu_random"
        android:title="@string/card_rulings" />
    <item
        android:id="@+id/quittosearch"
        android:icon="@drawable/menu_cancel"
        android:title="@string/quittosearch"/>

</menu>