<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Adam Feinstein and April King.

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/menu_search"/>
    <item
        android:id="@+id/announce_life"
        android:icon="@drawable/menu_speech"
        android:title="@string/announcelife"/>
    <item 
        android:id="@+id/change_gathering" 
        android:title="@string/change_default_gathering"
        android:icon="@drawable/menu_wizard"/>
     <item
        android:id="@+id/remove_player"
        android:icon="@drawable/menu_minus"
        android:title="@string/removeplayer"/>
    <item
        android:id="@+id/add_player"
        android:icon="@drawable/menu_plus"
        android:title="@string/addplayer"/>

</menu>