<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/traderDialogNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/trader_default_number_of" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/traderDialogChangeSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trader_change_set" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/traderDialogRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trader_remove" />

        <Button
            android:id="@+id/traderDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trader_done" />

    </LinearLayout>

</LinearLayout>