<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/defaultNameRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gathering_default_name" />

        <RadioButton
            android:id="@+id/customNameRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/custom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dip"
            android:layout_marginTop="-50dip"
            android:layout_weight="1"
            android:hint="@string/gathering_custom_name"
            android:selectAllOnFocus="true" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gathering_default_life"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/starting_life"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/gathering_default_life_num" />

    </LinearLayout>

</LinearLayout>